# rutken_static_analyzer

./: .gitignore  Cargo.toml  LICENSE  offset.txt  opt.txt
cli/: Cargo.toml
cli/src/: main.rs
crates/apk/: Cargo.toml
crates/apk/src/: binary.rs  errors.rs  lib.rs  manifest.rs  reader.rs
crates/apk/src/axml/: attribute.rs  chunks.rs  constants.rs  element.rs  end_element.rs  end_namespace.rs  header.rs  mod.rs  namespace.rs  node.rs  parser.rs  resolve.rs  resource_map.rs  string_pool.rs
crates/apk/src/dex/: header.rs  mod.rs  parser.rs  string_id.rs
