[workspace]
members = [
    "cli",
    "crates/apk",
]

resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Yashas P"]
repository = "https://github.com/WRenchJr42/rutken_static_analyzer"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sha2 = "0.10"
zip = "2"
