[package]
name = "apk"
version = "0.0.1"
edition = "2024"
authors = ["Yashas P"]
license = "MIT"
description = "APK parsing library for Rutken Static Analyzer"
repository = "https://github.com/WRenchJr42/rutken_static_analyzer"

[dependencies]
zip = "2"
sha2 = "0.10"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
